Fix bug in schedule where overlapping shifts hide each other

--- a/employee-rostering-frontend/src/ui/pages/shift/BigCalendarSchedule.css
+++ b/employee-rostering-frontend/src/ui/pages/shift/BigCalendarSchedule.css
@@ -13,6 +13,19 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
+.rbc-events-container {
+    display: grid;
+    grid-template-rows: repeat(100, 1fr);
+}
+  
+.rbc-day-slot .rbc-event {
+    position: static;
+    top: 0 !important;
+    left: 0 !important;
+    width: 100% !important;
+    height: 100% !important;
+}
+
 .rbc-time-view {
     background-color: var(--pf-global--BackgroundColor--100)
 }
